fixed layout overflow problem

--- a/assets/scss/_main.scss
+++ b/assets/scss/_main.scss
@@ -2,7 +2,7 @@
   width: 60%;
   max-width: 34.6875em;
   min-width: 18.75em;
-  min-height: 22.0625em;
+  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -16,7 +16,6 @@
   background-color: $lightBlue;
   border-radius: 9px;
   border: solid 1px $lightBrown;
-  height: 100%;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -55,12 +54,15 @@
 
 .tasks {
   list-style: none;
-  margin-top: 2.625em;
+  margin: 2.625em 0;
   width: 90%;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  height: 45%;
+  min-height: 17rem;
+
+  > :not(:last-child) {
+    margin-bottom: 0.5rem;
+  }
 }
 
 .single-task {
